# simple-chat

./: .gitignore  README.md  docker-compose-local.yaml  env-template  pyproject.toml
.claude/: settings.local.json
.github/workflows/: pull_request.yml
app/: main.py
app/infrastructure/handler/: healthy.py  images.py
app/infrastructure/ia/: openia_cli.py
app/infrastructure/websocket/: chat.py
app/model/: ai_image.py  chat.py
app/resources/: llm_messages.json
app/service/: chat.py  ia_image.py
app/shared/: database.py  exceptions.py
test/model/: ia_image_test.py
