[project]
name = "py-simple-chatbot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "coverage>=7.15.2",
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-redis>=0.2.5",
    "openai>=2.45.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.1,<8.0",
    "ruff>=0.15.21",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
