[project]
name = "py-simple-chatbot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-redis>=0.2.5",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.1,<8.0",
    "ruff>=0.15.22",
    "uvicorn>=0.51.0",
]
